[tool.poetry]
name = "sdm-bio"
version = "0.1.0"
description = ""
authors = ["Marcelo-Kenji-Noda <54538758+Marcelo-Kenji-Noda@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.14.4"
rasterio = "^1.3.10"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
contextily = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
